[gd_scene load_steps=17 format=2]

[ext_resource path="res://Frog.gd" type="Script" id=1]
[ext_resource path="res://textures/frog.png" type="Texture" id=2]
[ext_resource path="res://textures/balloon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 16 )

[sub_resource type="Animation" id=2]

resource_name = "busy"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 23 ]
}

[sub_resource type="Animation" id=13]

resource_name = "clone"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 32, 35 ]
}

[sub_resource type="Animation" id=3]

resource_name = "dead"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 28, 31 ]
}

[sub_resource type="Animation" id=4]

resource_name = "default"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=5]

resource_name = "dying"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 27 ]
}

[sub_resource type="Animation" id=6]

resource_name = "eating"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 15 ]
}

[sub_resource type="Animation" id=7]

resource_name = "falling"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 19 ]
}

[sub_resource type="Animation" id=8]

resource_name = "flying"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 11 ]
}

[sub_resource type="Animation" id=9]

resource_name = "inflating"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="Animation" id=11]

resource_name = "default"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=10]

resource_name = "inflating"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="Animation" id=12]

resource_name = "popping"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 11 ]
}

[node name="Frog" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1026
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
vframes = 9
hframes = 4
frame = 35
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/busy = SubResource( 2 )
anims/clone = SubResource( 13 )
anims/dead = SubResource( 3 )
anims/default = SubResource( 4 )
anims/dying = SubResource( 5 )
anims/eating = SubResource( 6 )
anims/falling = SubResource( 7 )
anims/flying = SubResource( 8 )
anims/inflating = SubResource( 9 )
blend_times = [  ]

[node name="deathTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = false

[node name="directionTimer" type="Timer" parent="." index="4" groups=[
"frogs",
]]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="eatingTimer" type="Timer" parent="." index="5" groups=[
"frogs",
]]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="busyTimer" type="Timer" parent="." index="6" groups=[
"frogs",
]]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="BalloonSprite" type="Sprite" parent="." index="7"]

position = Vector2( 0, -32 )
texture = ExtResource( 3 )
vframes = 3
hframes = 4
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="BalloonSprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/default = SubResource( 11 )
anims/inflating = SubResource( 10 )
anims/popping = SubResource( 12 )
blend_times = [  ]

[node name="Control" type="Control" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -64.0
margin_right = 20.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_frog_animation_finished"]

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_frog_animation_started"]

[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]

[connection signal="timeout" from="directionTimer" to="." method="_on_directionTimer_timeout"]

[connection signal="timeout" from="eatingTimer" to="." method="_on_eatingTimer_timeout"]

[connection signal="timeout" from="busyTimer" to="." method="_on_busyTimer_timeout"]

[connection signal="animation_finished" from="BalloonSprite/AnimationPlayer" to="." method="_on_balloon_animation_finished"]

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]


